src/test/resources/org/nest/nestml/_cocos/valid/aliasHasOneVar.nestml
component AliasSetter:
    parameter:
        x integer = 5
        alias y integer = -x
        alias z real = x * y
    end
end
