src/test/resources/org/nest/nestml/_cocos/invalid/aliasHasOneVar.nestml
component AliasSetter:
    parameters:
        x integer = 5
        alias y, g integer = -x
        alias z real = x * y
    end

    function set_y(v real):
        x = -v
    end

    function set_z():
    end

end